# ai-news-bot

./: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: fc5d55ed2029_foggoten_first_migration.py
app/: main.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  health.py
app/core/: __init__.py  config.py  database.py  loguru.py
app/crud/: health.py
app/models/: __init__.py  base.py  enums.py  key_word.py  news_item.py  post.py  source.py
app/schemas/: health.py
