[project]
name = "ai-news-bot"
version = "0.1.0"
description = "Ai News Bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "ASYNC",
    "T20"
]

ignore = ["UP037"]

[tool.ruff.lint.isort]
force-single-line = true


[tool.ty.rules]
all = "error"
